tests/fixtures/syntax/valid/logical_nested_composition.repor
case "logical nested composition" {
  $ true
  assert {
    all {
      not {
        exit 1
      }
      any {
        exit 0
        exit 2
      }
    }
  }
}
