tests/fixtures/syntax/invalid/dir_subject_not_supported.repor
case "dir subject is not v0 syntax" {
  $ true
  assert {
    dir "out" exists
  }
}
